--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ section {
     <div class="photo" id="p6"><img src="photo/photo6.jpg"></div>
     <!-- <div class="photo" id="p7"><img src="photo/photo7.jpg"></div> исправил дубликат -->
 
-    <div class="center-text" style="
+    <div class="center-text" style="color:lightgray;
   text-shadow:
     0 2px 6px rgba(0,0,0,0.6),
     0 6px 18px rgba(0,0,0,0.45);
@@ -314,30 +314,18 @@ section {
   user-select: none; /* Стандартный синтаксис */
 ">
       Поздравляю тебя с Новым годом!
-      Сложно назвать 2025 год хорошим — как минимум пока что.
-      В нём произошло много неприятных событий, как глобальных, так и личных.
-
-      Но, несмотря на это, он был богат и хорошими моментами.
-      Поделюсь парой из них.
-
-      2025 год начался с того, что я наконец-то собрал себе игровой компьютер
-      и тем самым закрыл детскую мечту.
-
-      В 2025 году я добился права на АГС.
-      Да, это, конечно, всего лишь меньшее зло из двух,
-      но я не обязан идти в армию.
-
-      2025 год — это год исполнения большой цели и мечты:
-      получение прав на мотоцикл и его покупка.
+      Сложно назвать 2025 год просым.
+      В нём произошло много спорных событий, как глобальных, так и личных.
+      Но, несмотря на это, он был богат и хорошими событиями.
 
       Но одно событие в 2025 году было особеннее других.
       В этом году я встретил тебя!
-      Это самый счастливый момент года.
+      Это самый счастливый момент года!
 
       Я очень сильно тебя люблю
-      и хочу, чтобы в 2026 году (да и во все остальные года)
+      и хочу, чтобы в 2026🎄 году (да и во все остальные года)
       мы делали друг друга ещё счастливее
-      и любили только сильнее!
+      и любили только сильнее!❤️‍🔥❤️‍🔥❤️‍🔥
     </div>
   </div>
 </section>
