--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@ section {
   user-select: none; /* Стандартный синтаксис */
 ">
       Поздравляю тебя с Новым годом!
-      Сложно назвать 2025 год просым.
-      В нём произошло много спорных событий, как глобальных, так и личных.
+      Сложно назвать 2025 год простым.
+      В нём произошло много спорных моментов, как глобальных, так и личных.
       Но, несмотря на это, он был богат и хорошими событиями.
 
       Но одно событие в 2025 году было особеннее других.
@@ -514,3 +514,4 @@ new IntersectionObserver(entries => {
 
 </body>
 </html>
+
